# classeviva-expressive

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.config.ts  design.md  manifest.json  package.json  pnpm-lock.yaml  qa-back.summary.txt  qa-body-bacheca.summary.txt  qa-body-detail.xml  qa-body-start.summary.txt  qa-current.summary.txt  qa-current.xml  qa-expressive-agenda.summary.txt  qa-expressive-agenda.xml  qa-expressive-altro.xml  qa-expressive-bacheca-detail.xml  qa-expressive-bacheca.summary.txt  qa-expressive-bacheca.xml  qa-expressive-compiti.xml  qa-expressive-home-scroll.summary.txt  qa-expressive-start-logcat.txt  qa-expressive-start.summary.txt  qa-expressive-start.xml  qa-expressive-tabs-logcat.txt  qa-expressive-voti-detail.summary.txt  qa-expressive-voti-detail.xml  qa-expressive-voti.summary.txt  qa-expressive-voti.xml  qa-final-altro.xml  qa-final-bacheca-detail.summary.txt  qa-final-bacheca-detail.xml  qa-final-compiti-late.summary.txt  qa-final-compiti-late.xml  qa-final-compiti-may.summary.txt  qa-final-compiti-may.xml  qa-final-compiti-may7.summary.txt  qa-final-compiti-may7.xml  (+67 more)
backend/gateway/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/gateway/app/: __init__.py  main.py  models.py  service.py
backend/gateway/classeviva_expressive_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/gateway/tests/: test_gateway.py
backend/python/: README.md  pyproject.toml
backend/python/app/: __init__.py  config.py  dependencies.py  main.py  schemas.py
backend/python/app/routers/: auth.py  dashboard.py  grades.py  (+5 more)
(+559 files in other folders)
